# seismic-anomalies-krr-assistant

./: Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 0.1-ab-seismic-visualize.ipynb  anomalies_features.json
ontology/: infered_seismic_ontology.owx  seismic_ontology.owx  seismic_ontology_rus.owx  seismic_with_anomalies.owx
seismic_anomalies_krr_assistant/: __init__.py  dataset.py  features.py  plots.py
seismic_anomalies_krr_assistant/modeling/: predict.py  train.py
