[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "seismic_anomalies_krr_assistant"
version = "0.0.1"
description = "Ontology-Based Interpretation of Seismic Anomalies Using Description Logics"
authors = [
  { name = "Alexander Belinsky" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["seismic_anomalies_krr_assistant"]
include = ["pyproject.toml", "seismic_anomalies_krr_assistant/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["seismic_anomalies_krr_assistant"]
force-sort-within-sections = true

