[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "seismic_anomalies_krr_assistant"
version = "0.0.1"
description = "Ontology-Based Interpretation of Seismic Anomalies Using Description Logics"
authors = [
  { name = "Alexander Belinsky" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = ">=3.10"

[tool.setuptools]
packages = ["seismic_anomalies_krr_assistant"]

# Или используем автоматический поиск с исключениями
# packages = {find = {}}
# package-dir = {"" = "."}

[tool.setuptools.package-data]
# Включаем не-Python файлы в пакет
"*" = ["*.txt", "*.json", "*.yaml", "*.yml"]


[tool.ruff]
line-length = 99
src = ["seismic_anomalies_krr_assistant"]
include = ["pyproject.toml", "seismic_anomalies_krr_assistant/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["seismic_anomalies_krr_assistant"]
force-sort-within-sections = true

